// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Branches - BranchSidebar should match snapshot 1`] = `
<body>
  <div>
    <div
      class="MuiBox-root css-rim9vd"
      data-testid="branch-sidebar-backdrop"
      style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
    />
    <div
      class="MuiBox-root css-96jqp"
    />
    <div
      class="MuiBox-root css-907n0v"
      style="webkit-transform: none; transform: none; webkit-transition: -webkit-transform 225ms cubic-bezier(0.0, 0, 0.2, 1) 0ms; transition: transform 225ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;"
    >
      <div
        class="MuiBox-root css-j7qwjs"
        data-testid="branch-list"
      >
        <div
          class="MuiBox-root css-14cad6o"
          id="sidebar-header"
        >
          <h5
            class="MuiTypography-root MuiTypography-h5 css-1bvxf5q-MuiTypography-root"
          >
            Change Branch
          </h5>
          <button
            class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorPrimary MuiIconButton-sizeLarge css-tbe422-MuiButtonBase-root-MuiIconButton-root"
            data-testid="slider-close"
            tabindex="0"
            type="button"
          >
            <svg>
              delete.svg
            </svg>
            <span
              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
            />
          </button>
        </div>
        <div
          class="MuiBox-root css-9udc97"
        >
          <div
            class="MuiBox-root css-y7f2rp"
          >
            <div
              class="MuiBox-root css-0"
            >
              <div
                class="MuiBox-root css-12aw9rk"
              >
                <p
                  class="MuiTypography-root MuiTypography-body1 css-1ecxygc-MuiTypography-root"
                >
                  Your Home Branch
                </p>
                <div
                  class="MuiGrid-root MuiGrid-container css-11lq3yg-MuiGrid-root"
                >
                  <div
                    class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-8 css-15h7jd8-MuiGrid-root"
                  >
                    <div
                      class="MuiBox-root css-wbxxl7"
                    >
                      <span
                        class="MuiBox-root css-12z0wuy"
                      >
                        <svg>
                          branch.svg
                        </svg>
                      </span>
                      <p
                        class="MuiTypography-root MuiTypography-body1 css-193p9au-MuiTypography-root"
                        data-testid="no-name-header"
                      >
                        (No Name)
                      </p>
                    </div>
                    <div
                      class="MuiBox-root css-0"
                    >
                      <p
                        class="MuiTypography-root MuiTypography-body1 css-1k41qqb-MuiTypography-root"
                        data-testid="address1"
                      >
                        (No Address)
                      </p>
                    </div>
                    <div
                      class="MuiBox-root css-0"
                    >
                      <p
                        class="MuiTypography-root MuiTypography-body1 css-1k41qqb-MuiTypography-root"
                        data-testid="branch-city-state-zip"
                      >
                        (No City)(No State) 
                      </p>
                    </div>
                  </div>
                  <div
                    class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-direction-xs-column MuiGrid-grid-xs-4 css-1fogx24-MuiGrid-root"
                  >
                    <button
                      class="MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-disableElevation MuiButtonBase-root  css-l6ikmy-MuiButtonBase-root-MuiButton-root"
                      data-testid="undefined-select-branch-button"
                      tabindex="0"
                      type="button"
                    >
                      Select
                    </button>
                  </div>
                </div>
              </div>
              <div
                class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-8 MuiGrid-grid-md-12 css-cl5xt0-MuiGrid-root"
              >
                <div
                  class="MuiBox-root css-1qntbrp"
                >
                  <div
                    class="MuiFormControl-root MuiFormControl-fullWidth css-q8hpuo-MuiFormControl-root"
                  >
                    <label
                      class="MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-root MuiFormLabel-colorPrimary MuiFormLabel-filled css-1411gyj-MuiFormLabel-root-MuiInputLabel-root"
                      data-shrink="true"
                      id="branch-filter-label"
                    >
                      Location Types
                    </label>
                    <div
                      class="MuiInput-root MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-formControl css-1808046-MuiInputBase-root-MuiInput-root"
                      data-testid="branch-filter-select"
                    >
                      <div
                        aria-expanded="false"
                        aria-haspopup="listbox"
                        aria-labelledby="branch-filter-label branch-filter-select"
                        class="MuiSelect-select MuiSelect-outlined MuiInput-input MuiInputBase-input css-hb27wf-MuiSelect-select-MuiInputBase-input-MuiInput-input"
                        id="branch-filter-select"
                        role="button"
                        tabindex="0"
                      >
                        All Location Types
                      </div>
                      <input
                        aria-hidden="true"
                        class="MuiSelect-nativeInput css-yf8vq0-MuiSelect-nativeInput"
                        tabindex="-1"
                        value="none"
                      />
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiSelect-icon MuiSelect-iconOutlined css-hfutr2-MuiSvgIcon-root-MuiSelect-icon"
                        data-testid="ArrowDropDownIcon"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M7 10l5 5 5-5z"
                        />
                      </svg>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <hr
              class="MuiDivider-root MuiDivider-fullWidth css-di86mu-MuiDivider-root"
            />
            <div
              class="MuiBox-root css-0"
            >
              <div
                class="MuiBox-root css-12aw9rk"
              >
                <p
                  class="MuiTypography-root MuiTypography-body1 css-1ecxygc-MuiTypography-root"
                >
                  Currently Selected Branch
                </p>
                <div
                  class="MuiGrid-root MuiGrid-container css-11lq3yg-MuiGrid-root"
                >
                  <div
                    class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-8 css-15h7jd8-MuiGrid-root"
                  >
                    <div
                      class="MuiBox-root css-wbxxl7"
                    >
                      <p
                        class="MuiTypography-root MuiTypography-body1 css-193p9au-MuiTypography-root"
                        data-testid="test-2-header"
                      >
                        Test 2
                      </p>
                    </div>
                    <div
                      class="MuiBox-root css-0"
                    >
                      <p
                        class="MuiTypography-root MuiTypography-body1 css-1k41qqb-MuiTypography-root"
                        data-testid="address1"
                      >
                        (No Address)
                      </p>
                    </div>
                    <div
                      class="MuiBox-root css-0"
                    >
                      <p
                        class="MuiTypography-root MuiTypography-body1 css-1k41qqb-MuiTypography-root"
                        data-testid="branch-city-state-zip"
                      >
                        (No City)(No State) 
                      </p>
                    </div>
                  </div>
                  <div
                    class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-direction-xs-column MuiGrid-grid-xs-4 css-1fogx24-MuiGrid-root"
                  >
                    <button
                      class="MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-disableElevation MuiButtonBase-root  css-19zohkf-MuiButtonBase-root-MuiButton-root"
                      data-testid="2-select-branch-button"
                      tabindex="0"
                      type="button"
                    >
                      Selected
                    </button>
                  </div>
                </div>
              </div>
              <hr
                class="MuiDivider-root MuiDivider-fullWidth css-di86mu-MuiDivider-root"
              />
            </div>
            <div
              class="MuiBox-root css-0"
            >
              <div
                class="MuiBox-root css-12aw9rk"
              >
                <div
                  class="MuiGrid-root MuiGrid-container css-11lq3yg-MuiGrid-root"
                >
                  <div
                    class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-8 css-15h7jd8-MuiGrid-root"
                  >
                    <div
                      class="MuiBox-root css-wbxxl7"
                    >
                      <p
                        class="MuiTypography-root MuiTypography-body1 css-193p9au-MuiTypography-root"
                        data-testid="test-0-header"
                      >
                        Test 0
                      </p>
                    </div>
                    <div
                      class="MuiBox-root css-0"
                    >
                      <p
                        class="MuiTypography-root MuiTypography-body1 css-1k41qqb-MuiTypography-root"
                        data-testid="address1"
                      >
                        (No Address)
                      </p>
                    </div>
                    <div
                      class="MuiBox-root css-0"
                    >
                      <p
                        class="MuiTypography-root MuiTypography-body1 css-1k41qqb-MuiTypography-root"
                        data-testid="branch-city-state-zip"
                      >
                        (No City)(No State) 
                      </p>
                    </div>
                  </div>
                  <div
                    class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-direction-xs-column MuiGrid-grid-xs-4 css-1fogx24-MuiGrid-root"
                  >
                    <button
                      class="MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-disableElevation MuiButtonBase-root  css-l6ikmy-MuiButtonBase-root-MuiButton-root"
                      data-testid="0-select-branch-button"
                      tabindex="0"
                      type="button"
                    >
                      Select
                    </button>
                  </div>
                </div>
              </div>
              <hr
                class="MuiDivider-root MuiDivider-fullWidth css-di86mu-MuiDivider-root"
              />
            </div>
            <div
              class="MuiBox-root css-0"
            >
              <div
                class="MuiBox-root css-12aw9rk"
              >
                <div
                  class="MuiGrid-root MuiGrid-container css-11lq3yg-MuiGrid-root"
                >
                  <div
                    class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-8 css-15h7jd8-MuiGrid-root"
                  >
                    <div
                      class="MuiBox-root css-wbxxl7"
                    >
                      <p
                        class="MuiTypography-root MuiTypography-body1 css-193p9au-MuiTypography-root"
                        data-testid="test-1-header"
                      >
                        Test 1
                      </p>
                    </div>
                    <div
                      class="MuiBox-root css-0"
                    >
                      <p
                        class="MuiTypography-root MuiTypography-body1 css-1k41qqb-MuiTypography-root"
                        data-testid="address1"
                      >
                        (No Address)
                      </p>
                    </div>
                    <div
                      class="MuiBox-root css-0"
                    >
                      <p
                        class="MuiTypography-root MuiTypography-body1 css-1k41qqb-MuiTypography-root"
                        data-testid="branch-city-state-zip"
                      >
                        (No City)(No State) 
                      </p>
                    </div>
                  </div>
                  <div
                    class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-direction-xs-column MuiGrid-grid-xs-4 css-1fogx24-MuiGrid-root"
                  >
                    <button
                      class="MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-disableElevation MuiButtonBase-root  css-l6ikmy-MuiButtonBase-root-MuiButton-root"
                      data-testid="1-select-branch-button"
                      tabindex="0"
                      type="button"
                    >
                      Select
                    </button>
                  </div>
                </div>
              </div>
              <hr
                class="MuiDivider-root MuiDivider-fullWidth css-di86mu-MuiDivider-root"
              />
            </div>
            <div
              class="MuiBox-root css-0"
            >
              <div
                class="MuiBox-root css-12aw9rk"
              >
                <div
                  class="MuiGrid-root MuiGrid-container css-11lq3yg-MuiGrid-root"
                >
                  <div
                    class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-8 css-15h7jd8-MuiGrid-root"
                  >
                    <div
                      class="MuiBox-root css-wbxxl7"
                    >
                      <p
                        class="MuiTypography-root MuiTypography-body1 css-193p9au-MuiTypography-root"
                        data-testid="test-3-header"
                      >
                        Test 3
                      </p>
                    </div>
                    <div
                      class="MuiBox-root css-0"
                    >
                      <p
                        class="MuiTypography-root MuiTypography-body1 css-1k41qqb-MuiTypography-root"
                        data-testid="address1"
                      >
                        (No Address)
                      </p>
                    </div>
                    <div
                      class="MuiBox-root css-0"
                    >
                      <p
                        class="MuiTypography-root MuiTypography-body1 css-1k41qqb-MuiTypography-root"
                        data-testid="branch-city-state-zip"
                      >
                        (No City)(No State) 
                      </p>
                    </div>
                  </div>
                  <div
                    class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-direction-xs-column MuiGrid-grid-xs-4 css-1fogx24-MuiGrid-root"
                  >
                    <button
                      class="MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-disableElevation MuiButtonBase-root  css-l6ikmy-MuiButtonBase-root-MuiButton-root"
                      data-testid="3-select-branch-button"
                      tabindex="0"
                      type="button"
                    >
                      Select
                    </button>
                  </div>
                </div>
              </div>
              <hr
                class="MuiDivider-root MuiDivider-fullWidth css-di86mu-MuiDivider-root"
              />
            </div>
            <div
              class="MuiBox-root css-0"
            >
              <div
                class="MuiBox-root css-12aw9rk"
              >
                <div
                  class="MuiGrid-root MuiGrid-container css-11lq3yg-MuiGrid-root"
                >
                  <div
                    class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-8 css-15h7jd8-MuiGrid-root"
                  >
                    <div
                      class="MuiBox-root css-wbxxl7"
                    >
                      <p
                        class="MuiTypography-root MuiTypography-body1 css-193p9au-MuiTypography-root"
                        data-testid="test-4-header"
                      >
                        Test 4
                      </p>
                    </div>
                    <div
                      class="MuiBox-root css-0"
                    >
                      <p
                        class="MuiTypography-root MuiTypography-body1 css-1k41qqb-MuiTypography-root"
                        data-testid="address1"
                      >
                        (No Address)
                      </p>
                    </div>
                    <div
                      class="MuiBox-root css-0"
                    >
                      <p
                        class="MuiTypography-root MuiTypography-body1 css-1k41qqb-MuiTypography-root"
                        data-testid="branch-city-state-zip"
                      >
                        (No City)(No State) 
                      </p>
                    </div>
                  </div>
                  <div
                    class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-direction-xs-column MuiGrid-grid-xs-4 css-1fogx24-MuiGrid-root"
                  >
                    <button
                      class="MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-disableElevation MuiButtonBase-root  css-l6ikmy-MuiButtonBase-root-MuiButton-root"
                      data-testid="4-select-branch-button"
                      tabindex="0"
                      type="button"
                    >
                      Select
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="MuiBox-root css-17jxzya"
          >
            <button
              class="MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-disableElevation MuiButtonBase-root  css-wyox7y-MuiButtonBase-root-MuiButton-root"
              data-testid="see-more-branches-button"
              tabindex="0"
              type="button"
            >
              See More Branches
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`Branches - BranchSidebar should match snapshot when loading 1`] = `
<body>
  <div>
    <div
      class="MuiBox-root css-rim9vd"
      data-testid="branch-sidebar-backdrop"
      style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
    />
    <div
      class="MuiBox-root css-96jqp"
    />
    <div
      class="MuiBox-root css-907n0v"
      style="webkit-transform: none; transform: none; webkit-transition: -webkit-transform 225ms cubic-bezier(0.0, 0, 0.2, 1) 0ms; transition: transform 225ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;"
    >
      <div
        class="MuiBox-root css-j7qwjs"
        data-testid="branch-list"
      >
        <div
          class="MuiBox-root css-14cad6o"
          id="sidebar-header"
        >
          <h5
            class="MuiTypography-root MuiTypography-h5 css-1bvxf5q-MuiTypography-root"
          >
            Change Branch
          </h5>
          <button
            class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorPrimary MuiIconButton-sizeLarge css-tbe422-MuiButtonBase-root-MuiIconButton-root"
            data-testid="slider-close"
            tabindex="0"
            type="button"
          >
            <svg>
              delete.svg
            </svg>
            <span
              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
            />
          </button>
        </div>
        <div
          class="MuiBox-root css-1l66e6a"
        >
          <div
            class="MuiBox-root css-y7f2rp"
          >
            <div
              class="MuiBox-root css-1tl0rlc"
              data-testid="loader-component"
            >
              <div
                class="MuiBox-root css-hyxlzm"
              >
                <span
                  aria-valuenow="100"
                  class="MuiCircularProgress-root MuiCircularProgress-determinate MuiCircularProgress-colorPrimary css-1wyqyef-MuiCircularProgress-root"
                  role="progressbar"
                  style="width: 80px; height: 80px; transform: rotate(-90deg);"
                >
                  <svg
                    class="MuiCircularProgress-svg css-1idz92c-MuiCircularProgress-svg"
                    viewBox="22 22 44 44"
                  >
                    <circle
                      class="MuiCircularProgress-circle MuiCircularProgress-circleDeterminate css-oxts8u-MuiCircularProgress-circle"
                      cx="44"
                      cy="44"
                      fill="none"
                      r="19.5"
                      stroke-width="5"
                      style="stroke-dasharray: 122.522; stroke-dashoffset: 0.000px;"
                    />
                  </svg>
                </span>
                <span
                  class="MuiCircularProgress-root MuiCircularProgress-indeterminate MuiCircularProgress-colorPrimary css-1gse1c1-MuiCircularProgress-root"
                  role="progressbar"
                  style="width: 80px; height: 80px;"
                >
                  <svg
                    class="MuiCircularProgress-svg css-1idz92c-MuiCircularProgress-svg"
                    viewBox="22 22 44 44"
                  >
                    <circle
                      class="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate css-176wh8e-MuiCircularProgress-circle"
                      cx="44"
                      cy="44"
                      fill="none"
                      r="19.5"
                      stroke-width="5"
                    />
                  </svg>
                </span>
              </div>
            </div>
            <div
              class="MuiBox-root css-0"
            >
              <div
                class="MuiBox-root css-12aw9rk"
              >
                <p
                  class="MuiTypography-root MuiTypography-body1 css-1ecxygc-MuiTypography-root"
                >
                  Your Home Branch
                </p>
                <div
                  class="MuiGrid-root MuiGrid-container css-11lq3yg-MuiGrid-root"
                >
                  <div
                    class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-8 css-15h7jd8-MuiGrid-root"
                  >
                    <div
                      class="MuiBox-root css-wbxxl7"
                    >
                      <span
                        class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-18tyrrx-MuiSkeleton-root"
                        style="width: 200px;"
                      />
                    </div>
                    <div
                      class="MuiBox-root css-0"
                    >
                      <span
                        class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-18tyrrx-MuiSkeleton-root"
                        style="width: 200px;"
                      />
                    </div>
                    <div
                      class="MuiBox-root css-0"
                    >
                      <span
                        class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-18tyrrx-MuiSkeleton-root"
                        style="width: 200px;"
                      />
                    </div>
                    <span
                      class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-18tyrrx-MuiSkeleton-root"
                      style="width: 128px; height: 32px;"
                    />
                  </div>
                  <div
                    class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-direction-xs-column MuiGrid-grid-xs-4 css-1fogx24-MuiGrid-root"
                  >
                    <div
                      class="MuiBox-root css-i3pbo"
                    >
                      <span
                        class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-18tyrrx-MuiSkeleton-root"
                      />
                      <span
                        class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-18tyrrx-MuiSkeleton-root"
                      />
                    </div>
                    <span
                      class="MuiSkeleton-root MuiSkeleton-rectangular MuiSkeleton-pulse css-3x7rqn-MuiSkeleton-root"
                      style="height: 36px;"
                    />
                  </div>
                </div>
              </div>
              <div
                class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-8 MuiGrid-grid-md-12 css-cl5xt0-MuiGrid-root"
              >
                <div
                  class="MuiBox-root css-1qntbrp"
                >
                  <div
                    class="MuiFormControl-root MuiFormControl-fullWidth css-q8hpuo-MuiFormControl-root"
                  >
                    <label
                      class="MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-root MuiFormLabel-colorPrimary MuiFormLabel-filled css-1411gyj-MuiFormLabel-root-MuiInputLabel-root"
                      data-shrink="true"
                      id="branch-filter-label"
                    >
                      Location Types
                    </label>
                    <div
                      class="MuiInput-root MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-formControl css-1808046-MuiInputBase-root-MuiInput-root"
                      data-testid="branch-filter-select"
                    >
                      <div
                        aria-expanded="false"
                        aria-haspopup="listbox"
                        aria-labelledby="branch-filter-label branch-filter-select"
                        class="MuiSelect-select MuiSelect-outlined MuiInput-input MuiInputBase-input css-hb27wf-MuiSelect-select-MuiInputBase-input-MuiInput-input"
                        id="branch-filter-select"
                        role="button"
                        tabindex="0"
                      >
                        All Location Types
                      </div>
                      <input
                        aria-hidden="true"
                        class="MuiSelect-nativeInput css-yf8vq0-MuiSelect-nativeInput"
                        tabindex="-1"
                        value="none"
                      />
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiSelect-icon MuiSelect-iconOutlined css-hfutr2-MuiSvgIcon-root-MuiSelect-icon"
                        data-testid="ArrowDropDownIcon"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M7 10l5 5 5-5z"
                        />
                      </svg>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <hr
              class="MuiDivider-root MuiDivider-fullWidth css-di86mu-MuiDivider-root"
            />
            <div
              class="MuiBox-root css-0"
            >
              <div
                class="MuiBox-root css-12aw9rk"
              >
                <div
                  class="MuiGrid-root MuiGrid-container css-11lq3yg-MuiGrid-root"
                >
                  <div
                    class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-8 css-15h7jd8-MuiGrid-root"
                  >
                    <div
                      class="MuiBox-root css-wbxxl7"
                    >
                      <span
                        class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-18tyrrx-MuiSkeleton-root"
                        style="width: 200px;"
                      />
                    </div>
                    <div
                      class="MuiBox-root css-0"
                    >
                      <span
                        class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-18tyrrx-MuiSkeleton-root"
                        style="width: 200px;"
                      />
                    </div>
                    <div
                      class="MuiBox-root css-0"
                    >
                      <span
                        class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-18tyrrx-MuiSkeleton-root"
                        style="width: 200px;"
                      />
                    </div>
                    <span
                      class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-18tyrrx-MuiSkeleton-root"
                      style="width: 128px; height: 32px;"
                    />
                  </div>
                  <div
                    class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-direction-xs-column MuiGrid-grid-xs-4 css-1fogx24-MuiGrid-root"
                  >
                    <div
                      class="MuiBox-root css-i3pbo"
                    >
                      <span
                        class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-18tyrrx-MuiSkeleton-root"
                      />
                      <span
                        class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-18tyrrx-MuiSkeleton-root"
                      />
                    </div>
                    <span
                      class="MuiSkeleton-root MuiSkeleton-rectangular MuiSkeleton-pulse css-3x7rqn-MuiSkeleton-root"
                      style="height: 36px;"
                    />
                  </div>
                </div>
              </div>
              <hr
                class="MuiDivider-root MuiDivider-fullWidth css-di86mu-MuiDivider-root"
              />
            </div>
            <div
              class="MuiBox-root css-0"
            >
              <div
                class="MuiBox-root css-12aw9rk"
              >
                <div
                  class="MuiGrid-root MuiGrid-container css-11lq3yg-MuiGrid-root"
                >
                  <div
                    class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-8 css-15h7jd8-MuiGrid-root"
                  >
                    <div
                      class="MuiBox-root css-wbxxl7"
                    >
                      <span
                        class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-18tyrrx-MuiSkeleton-root"
                        style="width: 200px;"
                      />
                    </div>
                    <div
                      class="MuiBox-root css-0"
                    >
                      <span
                        class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-18tyrrx-MuiSkeleton-root"
                        style="width: 200px;"
                      />
                    </div>
                    <div
                      class="MuiBox-root css-0"
                    >
                      <span
                        class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-18tyrrx-MuiSkeleton-root"
                        style="width: 200px;"
                      />
                    </div>
                    <span
                      class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-18tyrrx-MuiSkeleton-root"
                      style="width: 128px; height: 32px;"
                    />
                  </div>
                  <div
                    class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-direction-xs-column MuiGrid-grid-xs-4 css-1fogx24-MuiGrid-root"
                  >
                    <div
                      class="MuiBox-root css-i3pbo"
                    >
                      <span
                        class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-18tyrrx-MuiSkeleton-root"
                      />
                      <span
                        class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-18tyrrx-MuiSkeleton-root"
                      />
                    </div>
                    <span
                      class="MuiSkeleton-root MuiSkeleton-rectangular MuiSkeleton-pulse css-3x7rqn-MuiSkeleton-root"
                      style="height: 36px;"
                    />
                  </div>
                </div>
              </div>
              <hr
                class="MuiDivider-root MuiDivider-fullWidth css-di86mu-MuiDivider-root"
              />
            </div>
            <div
              class="MuiBox-root css-0"
            >
              <div
                class="MuiBox-root css-12aw9rk"
              >
                <div
                  class="MuiGrid-root MuiGrid-container css-11lq3yg-MuiGrid-root"
                >
                  <div
                    class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-8 css-15h7jd8-MuiGrid-root"
                  >
                    <div
                      class="MuiBox-root css-wbxxl7"
                    >
                      <span
                        class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-18tyrrx-MuiSkeleton-root"
                        style="width: 200px;"
                      />
                    </div>
                    <div
                      class="MuiBox-root css-0"
                    >
                      <span
                        class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-18tyrrx-MuiSkeleton-root"
                        style="width: 200px;"
                      />
                    </div>
                    <div
                      class="MuiBox-root css-0"
                    >
                      <span
                        class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-18tyrrx-MuiSkeleton-root"
                        style="width: 200px;"
                      />
                    </div>
                    <span
                      class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-18tyrrx-MuiSkeleton-root"
                      style="width: 128px; height: 32px;"
                    />
                  </div>
                  <div
                    class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-direction-xs-column MuiGrid-grid-xs-4 css-1fogx24-MuiGrid-root"
                  >
                    <div
                      class="MuiBox-root css-i3pbo"
                    >
                      <span
                        class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-18tyrrx-MuiSkeleton-root"
                      />
                      <span
                        class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-18tyrrx-MuiSkeleton-root"
                      />
                    </div>
                    <span
                      class="MuiSkeleton-root MuiSkeleton-rectangular MuiSkeleton-pulse css-3x7rqn-MuiSkeleton-root"
                      style="height: 36px;"
                    />
                  </div>
                </div>
              </div>
              <hr
                class="MuiDivider-root MuiDivider-fullWidth css-di86mu-MuiDivider-root"
              />
            </div>
            <div
              class="MuiBox-root css-0"
            >
              <div
                class="MuiBox-root css-12aw9rk"
              >
                <div
                  class="MuiGrid-root MuiGrid-container css-11lq3yg-MuiGrid-root"
                >
                  <div
                    class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-8 css-15h7jd8-MuiGrid-root"
                  >
                    <div
                      class="MuiBox-root css-wbxxl7"
                    >
                      <span
                        class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-18tyrrx-MuiSkeleton-root"
                        style="width: 200px;"
                      />
                    </div>
                    <div
                      class="MuiBox-root css-0"
                    >
                      <span
                        class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-18tyrrx-MuiSkeleton-root"
                        style="width: 200px;"
                      />
                    </div>
                    <div
                      class="MuiBox-root css-0"
                    >
                      <span
                        class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-18tyrrx-MuiSkeleton-root"
                        style="width: 200px;"
                      />
                    </div>
                    <span
                      class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-18tyrrx-MuiSkeleton-root"
                      style="width: 128px; height: 32px;"
                    />
                  </div>
                  <div
                    class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-direction-xs-column MuiGrid-grid-xs-4 css-1fogx24-MuiGrid-root"
                  >
                    <div
                      class="MuiBox-root css-i3pbo"
                    >
                      <span
                        class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-18tyrrx-MuiSkeleton-root"
                      />
                      <span
                        class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-18tyrrx-MuiSkeleton-root"
                      />
                    </div>
                    <span
                      class="MuiSkeleton-root MuiSkeleton-rectangular MuiSkeleton-pulse css-3x7rqn-MuiSkeleton-root"
                      style="height: 36px;"
                    />
                  </div>
                </div>
              </div>
              <hr
                class="MuiDivider-root MuiDivider-fullWidth css-di86mu-MuiDivider-root"
              />
            </div>
            <div
              class="MuiBox-root css-0"
            >
              <div
                class="MuiBox-root css-12aw9rk"
              >
                <div
                  class="MuiGrid-root MuiGrid-container css-11lq3yg-MuiGrid-root"
                >
                  <div
                    class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-8 css-15h7jd8-MuiGrid-root"
                  >
                    <div
                      class="MuiBox-root css-wbxxl7"
                    >
                      <span
                        class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-18tyrrx-MuiSkeleton-root"
                        style="width: 200px;"
                      />
                    </div>
                    <div
                      class="MuiBox-root css-0"
                    >
                      <span
                        class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-18tyrrx-MuiSkeleton-root"
                        style="width: 200px;"
                      />
                    </div>
                    <div
                      class="MuiBox-root css-0"
                    >
                      <span
                        class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-18tyrrx-MuiSkeleton-root"
                        style="width: 200px;"
                      />
                    </div>
                    <span
                      class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-18tyrrx-MuiSkeleton-root"
                      style="width: 128px; height: 32px;"
                    />
                  </div>
                  <div
                    class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-direction-xs-column MuiGrid-grid-xs-4 css-1fogx24-MuiGrid-root"
                  >
                    <div
                      class="MuiBox-root css-i3pbo"
                    >
                      <span
                        class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-18tyrrx-MuiSkeleton-root"
                      />
                      <span
                        class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-18tyrrx-MuiSkeleton-root"
                      />
                    </div>
                    <span
                      class="MuiSkeleton-root MuiSkeleton-rectangular MuiSkeleton-pulse css-3x7rqn-MuiSkeleton-root"
                      style="height: 36px;"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`Branches - BranchSidebar should match snapshot when loading with branches 1`] = `
<body>
  <div>
    <div
      class="MuiBox-root css-rim9vd"
      data-testid="branch-sidebar-backdrop"
      style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
    />
    <div
      class="MuiBox-root css-96jqp"
    />
    <div
      class="MuiBox-root css-907n0v"
      style="webkit-transform: none; transform: none; webkit-transition: -webkit-transform 225ms cubic-bezier(0.0, 0, 0.2, 1) 0ms; transition: transform 225ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;"
    >
      <div
        class="MuiBox-root css-j7qwjs"
        data-testid="branch-list"
      >
        <div
          class="MuiBox-root css-14cad6o"
          id="sidebar-header"
        >
          <h5
            class="MuiTypography-root MuiTypography-h5 css-1bvxf5q-MuiTypography-root"
          >
            Change Branch
          </h5>
          <button
            class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorPrimary MuiIconButton-sizeLarge css-tbe422-MuiButtonBase-root-MuiIconButton-root"
            data-testid="slider-close"
            tabindex="0"
            type="button"
          >
            <svg>
              delete.svg
            </svg>
            <span
              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
            />
          </button>
        </div>
        <div
          class="MuiBox-root css-1l66e6a"
        >
          <div
            class="MuiBox-root css-y7f2rp"
          >
            <div
              class="MuiBox-root css-1tl0rlc"
              data-testid="loader-component"
            >
              <div
                class="MuiBox-root css-hyxlzm"
              >
                <span
                  aria-valuenow="100"
                  class="MuiCircularProgress-root MuiCircularProgress-determinate MuiCircularProgress-colorPrimary css-1wyqyef-MuiCircularProgress-root"
                  role="progressbar"
                  style="width: 80px; height: 80px; transform: rotate(-90deg);"
                >
                  <svg
                    class="MuiCircularProgress-svg css-1idz92c-MuiCircularProgress-svg"
                    viewBox="22 22 44 44"
                  >
                    <circle
                      class="MuiCircularProgress-circle MuiCircularProgress-circleDeterminate css-oxts8u-MuiCircularProgress-circle"
                      cx="44"
                      cy="44"
                      fill="none"
                      r="19.5"
                      stroke-width="5"
                      style="stroke-dasharray: 122.522; stroke-dashoffset: 0.000px;"
                    />
                  </svg>
                </span>
                <span
                  class="MuiCircularProgress-root MuiCircularProgress-indeterminate MuiCircularProgress-colorPrimary css-1gse1c1-MuiCircularProgress-root"
                  role="progressbar"
                  style="width: 80px; height: 80px;"
                >
                  <svg
                    class="MuiCircularProgress-svg css-1idz92c-MuiCircularProgress-svg"
                    viewBox="22 22 44 44"
                  >
                    <circle
                      class="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate css-176wh8e-MuiCircularProgress-circle"
                      cx="44"
                      cy="44"
                      fill="none"
                      r="19.5"
                      stroke-width="5"
                    />
                  </svg>
                </span>
              </div>
            </div>
            <div
              class="MuiBox-root css-0"
            >
              <div
                class="MuiBox-root css-12aw9rk"
              >
                <p
                  class="MuiTypography-root MuiTypography-body1 css-1ecxygc-MuiTypography-root"
                >
                  Your Home Branch
                </p>
                <div
                  class="MuiGrid-root MuiGrid-container css-11lq3yg-MuiGrid-root"
                >
                  <div
                    class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-8 css-15h7jd8-MuiGrid-root"
                  >
                    <div
                      class="MuiBox-root css-wbxxl7"
                    >
                      <span
                        class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-18tyrrx-MuiSkeleton-root"
                        style="width: 200px;"
                      />
                    </div>
                    <div
                      class="MuiBox-root css-0"
                    >
                      <span
                        class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-18tyrrx-MuiSkeleton-root"
                        style="width: 200px;"
                      />
                    </div>
                    <div
                      class="MuiBox-root css-0"
                    >
                      <span
                        class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-18tyrrx-MuiSkeleton-root"
                        style="width: 200px;"
                      />
                    </div>
                    <span
                      class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-18tyrrx-MuiSkeleton-root"
                      style="width: 128px; height: 32px;"
                    />
                  </div>
                  <div
                    class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-direction-xs-column MuiGrid-grid-xs-4 css-1fogx24-MuiGrid-root"
                  >
                    <div
                      class="MuiBox-root css-i3pbo"
                    >
                      <span
                        class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-18tyrrx-MuiSkeleton-root"
                      />
                      <span
                        class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-18tyrrx-MuiSkeleton-root"
                      />
                    </div>
                    <span
                      class="MuiSkeleton-root MuiSkeleton-rectangular MuiSkeleton-pulse css-3x7rqn-MuiSkeleton-root"
                      style="height: 36px;"
                    />
                  </div>
                </div>
              </div>
              <div
                class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-8 MuiGrid-grid-md-12 css-cl5xt0-MuiGrid-root"
              >
                <div
                  class="MuiBox-root css-1qntbrp"
                >
                  <div
                    class="MuiFormControl-root MuiFormControl-fullWidth css-q8hpuo-MuiFormControl-root"
                  >
                    <label
                      class="MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-root MuiFormLabel-colorPrimary MuiFormLabel-filled css-1411gyj-MuiFormLabel-root-MuiInputLabel-root"
                      data-shrink="true"
                      id="branch-filter-label"
                    >
                      Location Types
                    </label>
                    <div
                      class="MuiInput-root MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-formControl css-1808046-MuiInputBase-root-MuiInput-root"
                      data-testid="branch-filter-select"
                    >
                      <div
                        aria-expanded="false"
                        aria-haspopup="listbox"
                        aria-labelledby="branch-filter-label branch-filter-select"
                        class="MuiSelect-select MuiSelect-outlined MuiInput-input MuiInputBase-input css-hb27wf-MuiSelect-select-MuiInputBase-input-MuiInput-input"
                        id="branch-filter-select"
                        role="button"
                        tabindex="0"
                      >
                        All Location Types
                      </div>
                      <input
                        aria-hidden="true"
                        class="MuiSelect-nativeInput css-yf8vq0-MuiSelect-nativeInput"
                        tabindex="-1"
                        value="none"
                      />
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiSelect-icon MuiSelect-iconOutlined css-hfutr2-MuiSvgIcon-root-MuiSelect-icon"
                        data-testid="ArrowDropDownIcon"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M7 10l5 5 5-5z"
                        />
                      </svg>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <hr
              class="MuiDivider-root MuiDivider-fullWidth css-di86mu-MuiDivider-root"
            />
            <div
              class="MuiBox-root css-0"
            >
              <div
                class="MuiBox-root css-12aw9rk"
              >
                <div
                  class="MuiGrid-root MuiGrid-container css-11lq3yg-MuiGrid-root"
                >
                  <div
                    class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-8 css-15h7jd8-MuiGrid-root"
                  >
                    <div
                      class="MuiBox-root css-wbxxl7"
                    >
                      <span
                        class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-18tyrrx-MuiSkeleton-root"
                        style="width: 200px;"
                      />
                    </div>
                    <div
                      class="MuiBox-root css-0"
                    >
                      <span
                        class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-18tyrrx-MuiSkeleton-root"
                        style="width: 200px;"
                      />
                    </div>
                    <div
                      class="MuiBox-root css-0"
                    >
                      <span
                        class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-18tyrrx-MuiSkeleton-root"
                        style="width: 200px;"
                      />
                    </div>
                    <span
                      class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-18tyrrx-MuiSkeleton-root"
                      style="width: 128px; height: 32px;"
                    />
                  </div>
                  <div
                    class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-direction-xs-column MuiGrid-grid-xs-4 css-1fogx24-MuiGrid-root"
                  >
                    <div
                      class="MuiBox-root css-i3pbo"
                    >
                      <span
                        class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-18tyrrx-MuiSkeleton-root"
                      />
                      <span
                        class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-18tyrrx-MuiSkeleton-root"
                      />
                    </div>
                    <span
                      class="MuiSkeleton-root MuiSkeleton-rectangular MuiSkeleton-pulse css-3x7rqn-MuiSkeleton-root"
                      style="height: 36px;"
                    />
                  </div>
                </div>
              </div>
              <hr
                class="MuiDivider-root MuiDivider-fullWidth css-di86mu-MuiDivider-root"
              />
            </div>
            <div
              class="MuiBox-root css-0"
            >
              <div
                class="MuiBox-root css-12aw9rk"
              >
                <div
                  class="MuiGrid-root MuiGrid-container css-11lq3yg-MuiGrid-root"
                >
                  <div
                    class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-8 css-15h7jd8-MuiGrid-root"
                  >
                    <div
                      class="MuiBox-root css-wbxxl7"
                    >
                      <span
                        class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-18tyrrx-MuiSkeleton-root"
                        style="width: 200px;"
                      />
                    </div>
                    <div
                      class="MuiBox-root css-0"
                    >
                      <span
                        class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-18tyrrx-MuiSkeleton-root"
                        style="width: 200px;"
                      />
                    </div>
                    <div
                      class="MuiBox-root css-0"
                    >
                      <span
                        class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-18tyrrx-MuiSkeleton-root"
                        style="width: 200px;"
                      />
                    </div>
                    <span
                      class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-18tyrrx-MuiSkeleton-root"
                      style="width: 128px; height: 32px;"
                    />
                  </div>
                  <div
                    class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-direction-xs-column MuiGrid-grid-xs-4 css-1fogx24-MuiGrid-root"
                  >
                    <div
                      class="MuiBox-root css-i3pbo"
                    >
                      <span
                        class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-18tyrrx-MuiSkeleton-root"
                      />
                      <span
                        class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-18tyrrx-MuiSkeleton-root"
                      />
                    </div>
                    <span
                      class="MuiSkeleton-root MuiSkeleton-rectangular MuiSkeleton-pulse css-3x7rqn-MuiSkeleton-root"
                      style="height: 36px;"
                    />
                  </div>
                </div>
              </div>
              <hr
                class="MuiDivider-root MuiDivider-fullWidth css-di86mu-MuiDivider-root"
              />
            </div>
            <div
              class="MuiBox-root css-0"
            >
              <div
                class="MuiBox-root css-12aw9rk"
              >
                <div
                  class="MuiGrid-root MuiGrid-container css-11lq3yg-MuiGrid-root"
                >
                  <div
                    class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-8 css-15h7jd8-MuiGrid-root"
                  >
                    <div
                      class="MuiBox-root css-wbxxl7"
                    >
                      <span
                        class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-18tyrrx-MuiSkeleton-root"
                        style="width: 200px;"
                      />
                    </div>
                    <div
                      class="MuiBox-root css-0"
                    >
                      <span
                        class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-18tyrrx-MuiSkeleton-root"
                        style="width: 200px;"
                      />
                    </div>
                    <div
                      class="MuiBox-root css-0"
                    >
                      <span
                        class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-18tyrrx-MuiSkeleton-root"
                        style="width: 200px;"
                      />
                    </div>
                    <span
                      class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-18tyrrx-MuiSkeleton-root"
                      style="width: 128px; height: 32px;"
                    />
                  </div>
                  <div
                    class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-direction-xs-column MuiGrid-grid-xs-4 css-1fogx24-MuiGrid-root"
                  >
                    <div
                      class="MuiBox-root css-i3pbo"
                    >
                      <span
                        class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-18tyrrx-MuiSkeleton-root"
                      />
                      <span
                        class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-18tyrrx-MuiSkeleton-root"
                      />
                    </div>
                    <span
                      class="MuiSkeleton-root MuiSkeleton-rectangular MuiSkeleton-pulse css-3x7rqn-MuiSkeleton-root"
                      style="height: 36px;"
                    />
                  </div>
                </div>
              </div>
              <hr
                class="MuiDivider-root MuiDivider-fullWidth css-di86mu-MuiDivider-root"
              />
            </div>
            <div
              class="MuiBox-root css-0"
            >
              <div
                class="MuiBox-root css-12aw9rk"
              >
                <div
                  class="MuiGrid-root MuiGrid-container css-11lq3yg-MuiGrid-root"
                >
                  <div
                    class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-8 css-15h7jd8-MuiGrid-root"
                  >
                    <div
                      class="MuiBox-root css-wbxxl7"
                    >
                      <span
                        class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-18tyrrx-MuiSkeleton-root"
                        style="width: 200px;"
                      />
                    </div>
                    <div
                      class="MuiBox-root css-0"
                    >
                      <span
                        class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-18tyrrx-MuiSkeleton-root"
                        style="width: 200px;"
                      />
                    </div>
                    <div
                      class="MuiBox-root css-0"
                    >
                      <span
                        class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-18tyrrx-MuiSkeleton-root"
                        style="width: 200px;"
                      />
                    </div>
                    <span
                      class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-18tyrrx-MuiSkeleton-root"
                      style="width: 128px; height: 32px;"
                    />
                  </div>
                  <div
                    class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-direction-xs-column MuiGrid-grid-xs-4 css-1fogx24-MuiGrid-root"
                  >
                    <div
                      class="MuiBox-root css-i3pbo"
                    >
                      <span
                        class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-18tyrrx-MuiSkeleton-root"
                      />
                      <span
                        class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-18tyrrx-MuiSkeleton-root"
                      />
                    </div>
                    <span
                      class="MuiSkeleton-root MuiSkeleton-rectangular MuiSkeleton-pulse css-3x7rqn-MuiSkeleton-root"
                      style="height: 36px;"
                    />
                  </div>
                </div>
              </div>
              <hr
                class="MuiDivider-root MuiDivider-fullWidth css-di86mu-MuiDivider-root"
              />
            </div>
            <div
              class="MuiBox-root css-0"
            >
              <div
                class="MuiBox-root css-12aw9rk"
              >
                <div
                  class="MuiGrid-root MuiGrid-container css-11lq3yg-MuiGrid-root"
                >
                  <div
                    class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-8 css-15h7jd8-MuiGrid-root"
                  >
                    <div
                      class="MuiBox-root css-wbxxl7"
                    >
                      <span
                        class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-18tyrrx-MuiSkeleton-root"
                        style="width: 200px;"
                      />
                    </div>
                    <div
                      class="MuiBox-root css-0"
                    >
                      <span
                        class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-18tyrrx-MuiSkeleton-root"
                        style="width: 200px;"
                      />
                    </div>
                    <div
                      class="MuiBox-root css-0"
                    >
                      <span
                        class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-18tyrrx-MuiSkeleton-root"
                        style="width: 200px;"
                      />
                    </div>
                    <span
                      class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-18tyrrx-MuiSkeleton-root"
                      style="width: 128px; height: 32px;"
                    />
                  </div>
                  <div
                    class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-direction-xs-column MuiGrid-grid-xs-4 css-1fogx24-MuiGrid-root"
                  >
                    <div
                      class="MuiBox-root css-i3pbo"
                    >
                      <span
                        class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-18tyrrx-MuiSkeleton-root"
                      />
                      <span
                        class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-18tyrrx-MuiSkeleton-root"
                      />
                    </div>
                    <span
                      class="MuiSkeleton-root MuiSkeleton-rectangular MuiSkeleton-pulse css-3x7rqn-MuiSkeleton-root"
                      style="height: 36px;"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="MuiBox-root css-1oxrb5q"
          >
            <button
              class="MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-disableElevation MuiButtonBase-root  css-wyox7y-MuiButtonBase-root-MuiButton-root"
              data-testid="see-more-branches-button"
              tabindex="0"
              type="button"
            >
              See More Branches
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`Branches - BranchSidebar should match snapshot when nearbyBranchesLoading is false, nearbyBranches is empty, and branchSelectOpen is on 1`] = `
<body>
  <div>
    <div
      class="MuiBox-root css-rim9vd"
      data-testid="branch-sidebar-backdrop"
      style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
    />
    <div
      class="MuiBox-root css-96jqp"
    />
    <div
      class="MuiBox-root css-907n0v"
      style="webkit-transform: none; transform: none; webkit-transition: -webkit-transform 225ms cubic-bezier(0.0, 0, 0.2, 1) 0ms; transition: transform 225ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;"
    >
      <div
        class="MuiBox-root css-j7qwjs"
        data-testid="branch-list"
      >
        <div
          class="MuiBox-root css-14cad6o"
          id="sidebar-header"
        >
          <h5
            class="MuiTypography-root MuiTypography-h5 css-1bvxf5q-MuiTypography-root"
          >
            Change Branch
          </h5>
          <button
            class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorPrimary MuiIconButton-sizeLarge css-tbe422-MuiButtonBase-root-MuiIconButton-root"
            data-testid="slider-close"
            tabindex="0"
            type="button"
          >
            <svg>
              delete.svg
            </svg>
            <span
              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
            />
          </button>
        </div>
        <div
          class="MuiBox-root css-9udc97"
        >
          <div
            class="MuiBox-root css-y7f2rp"
          >
            <div
              class="MuiBox-root css-0"
            >
              <div
                class="MuiBox-root css-12aw9rk"
              >
                <p
                  class="MuiTypography-root MuiTypography-body1 css-1ecxygc-MuiTypography-root"
                >
                  Your Home Branch
                </p>
                <div
                  class="MuiGrid-root MuiGrid-container css-11lq3yg-MuiGrid-root"
                >
                  <div
                    class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-8 css-15h7jd8-MuiGrid-root"
                  >
                    <div
                      class="MuiBox-root css-wbxxl7"
                    >
                      <span
                        class="MuiBox-root css-12z0wuy"
                      >
                        <svg>
                          branch.svg
                        </svg>
                      </span>
                      <p
                        class="MuiTypography-root MuiTypography-body1 css-193p9au-MuiTypography-root"
                        data-testid="no-name-header"
                      >
                        (No Name)
                      </p>
                    </div>
                    <div
                      class="MuiBox-root css-0"
                    >
                      <p
                        class="MuiTypography-root MuiTypography-body1 css-1k41qqb-MuiTypography-root"
                        data-testid="address1"
                      >
                        (No Address)
                      </p>
                    </div>
                    <div
                      class="MuiBox-root css-0"
                    >
                      <p
                        class="MuiTypography-root MuiTypography-body1 css-1k41qqb-MuiTypography-root"
                        data-testid="branch-city-state-zip"
                      >
                        (No City)(No State) 
                      </p>
                    </div>
                  </div>
                  <div
                    class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-direction-xs-column MuiGrid-grid-xs-4 css-1fogx24-MuiGrid-root"
                  >
                    <button
                      class="MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-disableElevation MuiButtonBase-root  css-19zohkf-MuiButtonBase-root-MuiButton-root"
                      data-testid="undefined-select-branch-button"
                      tabindex="0"
                      type="button"
                    >
                      Selected
                    </button>
                  </div>
                </div>
              </div>
              <div
                class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-8 MuiGrid-grid-md-12 css-cl5xt0-MuiGrid-root"
              >
                <div
                  class="MuiBox-root css-1qntbrp"
                >
                  <div
                    class="MuiFormControl-root MuiFormControl-fullWidth css-q8hpuo-MuiFormControl-root"
                  >
                    <label
                      class="MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-root MuiFormLabel-colorPrimary MuiFormLabel-filled css-1411gyj-MuiFormLabel-root-MuiInputLabel-root"
                      data-shrink="true"
                      id="branch-filter-label"
                    >
                      Location Types
                    </label>
                    <div
                      class="MuiInput-root MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-formControl css-1808046-MuiInputBase-root-MuiInput-root"
                      data-testid="branch-filter-select"
                    >
                      <div
                        aria-expanded="false"
                        aria-haspopup="listbox"
                        aria-labelledby="branch-filter-label branch-filter-select"
                        class="MuiSelect-select MuiSelect-outlined MuiInput-input MuiInputBase-input css-hb27wf-MuiSelect-select-MuiInputBase-input-MuiInput-input"
                        id="branch-filter-select"
                        role="button"
                        tabindex="0"
                      >
                        All Location Types
                      </div>
                      <input
                        aria-hidden="true"
                        class="MuiSelect-nativeInput css-yf8vq0-MuiSelect-nativeInput"
                        tabindex="-1"
                        value="none"
                      />
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiSelect-icon MuiSelect-iconOutlined css-hfutr2-MuiSvgIcon-root-MuiSelect-icon"
                        data-testid="ArrowDropDownIcon"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M7 10l5 5 5-5z"
                        />
                      </svg>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <hr
              class="MuiDivider-root MuiDivider-fullWidth css-di86mu-MuiDivider-root"
            />
          </div>
          <div
            class="MuiBox-root css-1sf3xto"
          >
            <p
              class="MuiTypography-root MuiTypography-body1 MuiTypography-alignCenter css-vvmd0t-MuiTypography-root"
            >
              No other branches found within 400 mile radius
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;
